# playdate-c-sdk-test

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
libadder/: CMakeLists.txt
src/: main.c
test/: CMakeLists.txt  test.c
